sonali content feedbacks

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -197,7 +197,7 @@
               <div class="event-content  py-3">
                 <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>11th Sep - 13th Sep 2024</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>Greater Noida, Uttar Pradesh</p>
               </div>
@@ -212,7 +212,7 @@
               <div class="event-content  py-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>28th July - 30th July 2023</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
               </div>
@@ -225,9 +225,9 @@
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
                 class="img-fluid br-8">
               <div class="event-content py-3">
-                <h3>SemiconIndia Conference 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
+                <h3>SemiconIndia 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>29th April - 1st May 2022</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>Bengaluru</p>
               </div>
