--- a/career.html
+++ b/career.html
@@ -109,11 +109,11 @@
               aria-haspopup="true" aria-expanded="false">
               Schemes
             </a>
-            <div class="dropdown-menu" aria-labelledby="semiconDropdown">
-              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a>
+            <div class="dropdown-menu" aria-labelledby="schemesDropdown">
+              <a class="dropdown-item" href="/semiconductor-scheme.html">Semiconductor Fabs</a>
+              <a class="dropdown-item" href="/display-scheme.html">Display Fabs</a>
+              <a class="dropdown-item" href="/compound-scheme.html">Compound/ATMP/OSAT</a>
+              <a class="dropdown-item" href="/design-link-scheme.html">Design Linked Incentive</a>
             </div>
           </li>
           <li class="nav-item dropdown">
