--- a/compound-scheme.html
+++ b/compound-scheme.html
@@ -246,21 +246,21 @@
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                      ></div>
                   <div class="notification-text align-content-center">Revised Guidelines for effective functioning of the Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab/ Discrete Semiconductors Fab and Semiconductor Assembly, Testing, Marking and Packaging (ATMP)/ Outsourced Semiconductor Assembly and Test (OSAT) facilities in India
                     <span class="notification-date">30 June, 2023</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702268991.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702268991.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                      ></div>
                   <div class="notification-text align-content-center">Modified scheme for setting up of Compound Semiconductors
                     <span class="notification-date">4 October, 2022</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120229_Notification_Modified_Scheme_for_Compound_Semiconductor_ATMP.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120229_Notification_Modified_Scheme_for_Compound_Semiconductor_ATMP.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
               </div>
             </div>
@@ -271,30 +271,30 @@
                 <div class="col-12">
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Guidelines for effective functioning of the Modified scheme for setting up of Compound Semiconductors
                       <span class="notification-date"> 10 October, 2022</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/11/1665479548_Guidelines-for-Modified-Scheme-for-Compound-Semiconductors-and-ATMP.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/11/1665479548_Guidelines-for-Modified-Scheme-for-Compound-Semiconductors-and-ATMP.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Scheme for setting up of Compound Semiconductors
                       <span class="notification-date">21 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756985_notification_compound_semiconductor.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756985_notification_compound_semiconductor.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Guidelines for effective functioning of the Scheme for setting up of Compound Semiconductors
                       <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756959_guidelines_compound_semiconductor_fab_atmp.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756959_guidelines_compound_semiconductor_fab_atmp.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                 </div>
               </div>
