--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -245,21 +245,21 @@
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                      ></div>
                   <div class="notification-text align-content-center">Design Linked Incentive (DLI) Scheme
                     <span class="notification-date">21 December, 2021</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                      ></div>
                   <div class="notification-text align-content-center">Guidelines for Design Linked Incentive (DLI) Scheme
                     <span class="notification-date">30 December, 2021</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
               </div>
             </div>
@@ -268,7 +268,12 @@
             <div class="ism-elem10_wrap m-0">
               <div class="row ism-elem10_wrap m-0">
                 <div class="col-12 text-center">
-         NO Data Found
+                  <div class="notification-tabs d-flex align-content-center br-8">
+                    <div class="notification-text align-content-center text-center" style="width: 100%;">         No Data Found
+
+                     
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
