--- a/display-scheme.html
+++ b/display-scheme.html
@@ -248,21 +248,21 @@
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                      ></div>
                   <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Display Fabs in India
                     <span class="notification-date">29 May, 2023</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702269362.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702269362.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                      ></div>
                   <div class="notification-text align-content-center">Modified Scheme for setting up of Display Fabs in India
                     <span class="notification-date">4 October, 2022</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
               </div>
             </div>
@@ -273,21 +273,21 @@
                 <div class="col-12">
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Guidelines for Scheme for setting up of Display Fabs in India
                       <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Scheme for setting up of Display Fabs in India
                       <span class="notification-date">21 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                 </div>
               </div>
