--- a/privacy-policies.html
+++ b/privacy-policies.html
@@ -176,7 +176,7 @@
       <div class="row px-4">
         <div class="col-sm-12">
           <div class="page-main-banner">
-            <h3>Privacy Policies</h3>
+            <h3>Privacy Policy</h3>
           </div>
         </div>
       </div>
