--- a/events.html
+++ b/events.html
@@ -176,9 +176,9 @@
               <div class="event-content pt-3">
                 <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>11th Sep - 13th Sep 2024</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>Greater Noida, Uttar Pradesh</p>
               </div>
             </div>
           </a>
@@ -192,9 +192,9 @@
               <div class="event-content pt-3">
                 <h3>Semiconductor Executive' Summit (SES) 2024 - Positioning India as a trusted partner in the global semiconductor supply chain</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>10th Sept 2024</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>Bharat Mandapam, New Delhi</p>
               </div>
             </div>
           </a>
@@ -207,9 +207,9 @@
               <div class="event-content pt-3">
                 <h3>Workshop on MEITY - NSF Research Collaboration</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>2nd Nov - 3rd Nov 2023</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>Delhi</p>
               </div>
             </div>
           </a>
@@ -224,7 +224,7 @@
               <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>28th July - 30th July 2023</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
               </div>
@@ -240,9 +240,9 @@
               <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - SemiconIndia Conference of Electronics Manufacturing Supply Chain Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>18th February 2023</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>New Delhi</p>
               </div>
             </div>
           </a>
@@ -253,13 +253,13 @@
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
                 class="img-fluid br-8">
               <div class="event-content pt-3">
-                <h3>SemiconIndia Conference 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
+                <h3>SemiconIndia 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p>
                   <span class="">
                     <img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>29th April - 1st May 2022</p>
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>Bengaluru</p>
               </div>
             </div>
           </a>
