--- a/our-ministers.html
+++ b/our-ministers.html
@@ -214,7 +214,7 @@
         </div>
         </div>
         
-        <div class="ism-scheme_info">
+        <div class="ism-scheme_info pt-3">
         <div class="ism-accoridan">
         <div class="accordion" id="accordionExample">
         <div class="accordion-item">
@@ -229,7 +229,9 @@
         <div class="accordion ism-accoridan" id="accordionFlushExample">
         <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
-          <button aria-controls="flush-collapseOne" aria-expanded="true" class="accordion-button" data-bs-target="#flush-collapseOne" data-bs-toggle="collapse" type="button">2021 - 2024</button>
+          <button aria-controls="flush-collapseOne" aria-expanded="true" class="accordion-button" data-bs-target="#flush-collapseOne" data-bs-toggle="collapse" type="button" style="
+          font-family: 'Poppins';
+      ">2021 - 2024</button>
         </h2>
         
         <div aria-labelledby="flush-headingOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample" id="flush-collapseOne">
