--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -245,23 +245,23 @@
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon">
-                    <img src="images/notification_icon.png" alt="" style="height:40px; width:40px;">
+                    <img src="images/notification_icon.png" alt="" >
                   </div>
                   <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Semiconductor Fabs in India
                     <span class="notification-date">29 May, 2023</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527229_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527229_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
                   <div class="notification-icon">
-                    <img src="images/notification_icon.png" alt="" style="height:40px; width:40px;">
+                    <img src="images/notification_icon.png" alt="" >
                   </div>
                   <div class="notification-text align-content-center">Modified Scheme for setting up of Semiconductor Fabs in India
                     <span class="notification-date">4 October, 2022</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665119978_Notification_Modified_Scheme_for_Semiconductor_Fabs.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                    style="height:40px; width:40px;"></span></div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665119978_Notification_Modified_Scheme_for_Semiconductor_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    ></span></a></div>
                 </div>
               </div>
             </div>
@@ -272,21 +272,21 @@
                 <div class="col-12">
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Guidelines for Scheme for setting up of Semiconductor Fabs in India
                       <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756298_guidelines_semiconductor_fab.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756298_guidelines_semiconductor_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                        style="height:40px; width:40px;"></div>
+                        ></div>
                     <div class="notification-text align-content-center">Scheme for setting up of Semiconductor Fabs in India
                       <span class="notification-date">21 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651758241_notification_semiconductor_fabs.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></span></div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651758241_notification_semiconductor_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                      ></span></a></div>
                   </div>
                 </div>
               </div>
