gallery internal pages

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -97,7 +97,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="semiconDropdown" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              SemiconIndia
+              <span class="header-active">SemiconIndia</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
               <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
