--- a/career.html
+++ b/career.html
@@ -119,7 +119,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="schemesDropdown" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              Notifications
+              <span class="header-active">Notifications</span>
+
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="/notices.html">Notice</a>
