--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   src="images/header/meity_header_logo.png"> </a>
             </div>
             <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
-                href="/index.html" target="_blank"><img alt="Digital india logo" class="img-fluid"
+                href="/index.html"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
             <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
@@ -77,7 +77,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="/index.html"><span class="header-active">Home</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
@@ -214,7 +214,7 @@
           <p class="sub-heading">What’s New</p>
         </div>
         <div class="col align-content-center text-right">
-          <a href="/notices.html" target="_blank" class="theme-Btn theme-Btn-dark">View More <span><img
+          <a href="/notices.html" class="theme-Btn theme-Btn-dark">View More <span><img
                 src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
         </div>
       </div>
@@ -300,7 +300,7 @@
                     establishing
                     the semiconductor fabs.</p>
                   <div class="text-right">
-                    <a href="/semiconductor-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View
+                    <a href="/semiconductor-scheme.html" class="theme-Btn theme-Btn-dark">View
                       More<span><img src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
                 </div>
@@ -326,7 +326,7 @@
                     Finance Committee shall determine the structure and quantum of fiscal support under the scheme for
                     establishing the display fabs.</p>
                   <div class="text-right">
-                    <a href="/display-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                    <a href="/display-scheme.html" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
 
@@ -352,7 +352,7 @@
                     fiscal support of 50% of capital expenditure to Compound Semiconductors / Silicon Photonics /
                     Sensors (including MEMS) Fabs and Semiconductor Packaging (ATMP / OSAT) units.</p>
                   <div class="text-right">
-                    <a href="/compound-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                    <a href="/compound-scheme.html" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
                 </div>
@@ -378,7 +378,7 @@
                     design(s) for Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and
                     semiconductor linked design(s) over a period of 5 years.</p>
                   <div class="text-right">
-                    <a href="design-link-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View
+                    <a href="design-link-scheme.html" class="theme-Btn theme-Btn-dark">View
                       More<span><img src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
                 </div>
@@ -607,7 +607,7 @@
           <p class="sub-heading text-white border-bot">Conferences and Summits</p>
         </div>
         <div class="col align-content-center text-right">
-          <a href="/events.html" target="_blank" class="theme-Btn theme-Btn-light">View More<span><img
+          <a href="/events.html" class="theme-Btn theme-Btn-light">View More<span><img
                 src="./images/arrow-btn_icon_dark.png" alt="" class="ml-3"></span></a>
         </div>
       </div>
@@ -617,12 +617,12 @@
             <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
               class="img-fluid br-8">
             <div class="event-content  py-3">
-              <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
+              <h3>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain</h3>
               <!-- <div class="notification-icon">
                 <img src="images/notification_icon.png" alt="" style="height:40px; width:40px;">
               </div> -->
               <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                    style="height:30px; width:30px;margin-right: 10px;"></span>September 11 - September 13, 2024</p>
+                    style="height:30px; width:30px;margin-right: 10px;"></span>11th Sep - 13th Sep 2024</p>
               <p><span class=""><img src="images/icons/location_icon.png" alt=""
                     style="height:30px; width:30px;margin-right: 10px;"></span>Greater Noida, Uttar Pradesh</p>
             </div>
@@ -635,7 +635,7 @@
             <div class="event-content  py-3">
               <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
               <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                    style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                    style="height:30px; width:30px;margin-right: 10px;"></span>28th July - 30th July 2023</p>
               <p><span class=""><img src="images/icons/location_icon.png" alt=""
                     style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
             </div>
@@ -646,9 +646,9 @@
             <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
               class="img-fluid br-8">
             <div class="event-content py-3">
-              <h3>SemiconIndia Conference 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
+              <h3>SemiconIndia 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
               <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                    style="height:30px; width:30px;margin-right: 10px;"></span>April 29 - May 1, 2022</p>
+                    style="height:30px; width:30px;margin-right: 10px;"></span>29th April - 1st May 2022</p>
               <p><span class=""><img src="images/icons/location_icon.png" alt=""
                     style="height:30px; width:30px;margin-right: 10px;"></span>Bengaluru, Karnataka</p>
             </div>
@@ -666,7 +666,7 @@
           <p class="sub-heading">Visual Highlights</p>
         </div>
         <div class="col align-content-center text-right">
-          <a href="/gallery.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+          <a href="/gallery.html" class="theme-Btn theme-Btn-dark">View More<span><img
                 src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
         </div>
       </div>
