--- a/contact-us.html
+++ b/contact-us.html
@@ -142,7 +142,7 @@
             <a class="nav-link" href="/faqs.html">FAQs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact-us.html">Contact Us</a>
+            <a class="nav-link" href="/contact-us.html"><span class="header-active">Contact Us</span></a>
           </li>
         </ul>
       </div>
