--- a/events.html
+++ b/events.html
@@ -134,7 +134,7 @@
             <a class="nav-link" href="/gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/events.html">Events</a>
+            <a class="nav-link" href="/events.html"><span class="header-active">Events</span></a>
           </li>
 
           <li class="nav-item">
