--- a/faqs.html
+++ b/faqs.html
@@ -135,7 +135,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/faqs.html">FAQs</a>
+            <a class="nav-link" href="/faqs.html"><span class="header-active">FAQs</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact-us.html">Contact Us</a>
