--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -110,7 +110,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="schemesDropdown" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              Schemes
+              <span class="header-active">Schemes</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="/semiconductor-scheme.html">Semiconductor Fabs</a>
