momento image change

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -192,7 +192,7 @@
         <div class="col-sm-4">
           <a href="">
             <div class="event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
+              <img src="/images/momento.webp"
                 class="img-fluid br-8">
               <div class="event-content  py-3">
                 <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
@@ -207,7 +207,7 @@
         <div class="col-sm-4">
           <a href="">
             <div class="event-cards">
-              <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/ism1_1.png"
+              <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
                 class="img-fluid br-8">
               <div class="event-content  py-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
