--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <p class="sub-heading">India Semiconductor Mission</p>
             <p>India Semiconductor Mission (ISM) is a specialized and independent Business Division within the Digital India Corporation that aims to build a vibrant semiconductor and display ecosystem to enable India’s emergence as a global hub for electronics manufacturing and design.</p>
             <div class="text-center">
-              <img src="images/chakra_to_chips.png" alt="" width="28%">
+              <img src="images/momento_2024.webp" alt="" width="40%">
             </div>
           </div>
         </div>
@@ -614,7 +614,7 @@
       <div class="row">
         <div class="col">
           <div class="event-cards">
-            <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
+            <img src="/images/momento.webp"
               class="img-fluid br-8">
             <div class="event-content  py-3">
               <h3>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain</h3>
@@ -630,7 +630,7 @@
         </div>
         <div class="col">
           <div class="event-cards">
-            <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/ism1_1.png"
+            <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
               class="img-fluid br-8">
             <div class="event-content  py-3">
               <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
